--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -36,11 +36,20 @@
   width: 100%;
   height: 48px;
   box-sizing: border-box;
-  padding: 0;
-  border: 1.5px solid #aaa;
+  border: 1.5px solid rgba(170, 170, 170, 0.2);
   border-radius: 50px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  padding: 0 0 0 24px;
   margin: 0;
-  opacity: .2;
+}
+
+.search__form-input::placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  color: #A0A0A0;
 }
 
 .search__form-button {
@@ -110,6 +119,15 @@
 .search__form-switch:checked::before {
   left: 15px;
   background: #2be080;
+}
+
+.search__form-error {
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  padding: 0;
+  margin: 6px 0 0 0;
+  color: #EE3465;
 }
 
 @media screen and (max-width: 769px) {
