--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -75,6 +75,12 @@
   line-height: 17px;
 }
 
+.register__form-button:disabled {
+  background: #F8F8F8;
+  color: #C2C2C2;
+  cursor: default;
+}
+
 .register__form-link {
   padding: 0;
   margin: 0 0 0 6px;
