--- a/src/components/Movies/MoviesCardList/MoviesCardList.css
+++ b/src/components/Movies/MoviesCardList/MoviesCardList.css
@@ -3,7 +3,7 @@
   width: 95%;
   flex-direction: column;
   align-items: center;
-  padding: 80px 0 110px 0;
+  padding: 80px 0 110px;
   margin: 0 auto;
 }
 
@@ -43,7 +43,7 @@
 @media screen and (max-width: 650px) {
   .moviescardlist {
     width: 90%;
-    padding: 0 0 50px 0;
+    padding: 0 0 50px;
     gap: 14px;
     grid-template-columns: repeat(auto-fit, minmax(300px, 237px));
   }
