--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -36,20 +36,20 @@
   width: 100%;
   height: 48px;
   box-sizing: border-box;
-  border: 1.5px solid rgba(170, 170, 170, 0.2);
+  padding: 0 0 0 24px;
+  border: 1.5px solid rgb(170 170 170 / 20%);
   border-radius: 50px;
+  margin: 0;
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
-  padding: 0 0 0 24px;
-  margin: 0;
 }
 
 .search__form-input::placeholder {
-  font-weight: 400;
+  color: #a0a0a0;
   font-size: 14px;
+  font-weight: 400;
   line-height: 18px;
-  color: #A0A0A0;
 }
 
 .search__form-button {
@@ -66,8 +66,8 @@
   background-position: center;
   background-repeat: no-repeat;
   cursor: pointer;
-  outline: none;
   opacity: 1;
+  outline: none;
   transition: opacity .5s;
 }
 
@@ -122,12 +122,12 @@
 }
 
 .search__form-error {
-  font-weight: 400;
-  font-size: 10px;
-  line-height: 12px;
   padding: 0;
-  margin: 6px 0 0 0;
-  color: #EE3465;
+  margin: 6px 0 0;
+  color: #ee3465;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 12px;
 }
 
 @media screen and (max-width: 769px) {
