--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -109,24 +109,24 @@
 
 .profile__form-link {
   padding: 0;
+  border: none;
   margin: 0;
+  background: transparent;
   color: #ee3465;
   font-size: 13px;
   font-style: normal;
   font-weight: 500;
   line-height: 16px;
   text-decoration: none;
-  background: transparent;
-  border: none;
 }
 
 .profile__form-error {
-  font-weight: 400;
-  font-size: 10px;
-  line-height: 12px;
   padding: 0;
-  margin: 6px 0 0 0;
-  color: #EE3465;
+  margin: 6px 0 0;
+  color: #ee3465;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 12px;
 }
 
 @media screen and (max-width: 769px) {
