--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -76,8 +76,8 @@
 }
 
 .register__form-button:disabled {
-  background: #F8F8F8;
-  color: #C2C2C2;
+  background: #f8f8f8;
+  color: #c2c2c2;
   cursor: default;
 }
 
@@ -105,12 +105,12 @@
 }
 
 .register__form-error {
-  font-weight: 400;
-  font-size: 10px;
-  line-height: 12px;
   padding: 0;
-  margin: 6px 0 0 0;
-  color: #EE3465;
+  margin: 6px 0 0;
+  color: #ee3465;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 12px;
 }
 
 @media screen and (max-width: 769px) {
