--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -129,6 +129,16 @@
   line-height: 12px;
 }
 
+.profile__form-success {
+  padding: 0;
+  margin: 6px 0 0;
+  color: #078c45;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 29px;
+  text-align: center;
+}
+
 @media screen and (max-width: 769px) {
   .profile {
     margin: 236px 0 0;
